--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<link rel="stylesheet" href="/css/style.css">
-
 <!-- // https://www.youtube.com/watch?v=4q2vvZn5aoo -->
-<canvas></canvas>
 
-<script src="/js/mario.js"></script>
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <canvas></canvas>
+    <script src="js/mario.js"></script>
+
+</body>
+
+</html>
